# thesis

./: .gitignore  LICENSE  README.md  astro.sty  kao.sty  kaorefs.sty  orcidlink.sty  pyproject.toml  thesis.bib  thesis.tex
chapters/: abstract.tex  appendix.tex  at2019fdr.tex  conclusion.tex  declaration.tex  followup.tex  icecube.tex  introduction.tex  nuclear.tex  theory.tex  ztf.tex
code/chapter_2_icecube/: chapter_2_icecube_alert_stats.py
code/chapter_4_follow_up/: .~lock.fu_overview.csv#  plot_overview.py
code/chapter_4_follow_up/ZTF20abbpkpa/: spectrum.py
code/chapter_4_follow_up/ZTF20abdnpdo/: plot_fit.py  reduce_mosfit_result_file.py  spectrum.py
code/chapter_4_follow_up/ZTF20acmxnpa/: spectrum.py
code/chapter_4_follow_up/ZTF21abecljv/: spectrum.py
code/chapter_4_follow_up/ZTF22aatwsqt/: snid_output.txt  spectrum.py
code/chapter_4_follow_up/follow_up_overview/: .~lock.fu_overview.csv#  .~lock.transients.csv#  calculate_area.py  classifications.py  fu_overview.csv  fu_stats.py  neutrino_too_followup - OVERVIEW_FU.csv  neutrino_too_followup - OVERVIEW_NOT_FU.csv  transients.csv
figures/: ic_DOM_connections.ai  ic_atwd_example.ai  ic_pmt_annotated.ai  ic_side_view.ai  ic_top_view.ai  ic_top_view.psd  schmidt2.ai  seeing.ai
images/: ic_DOM.ai  ic_cherenkov1.ai  ic_cherenkov2.ai  ic_cherenkov_spectrum.ai  ztf_calibration_flow.ai  ztf_camera.ai
images/fu/: NEDz.ai  fpbot_slack_border.ai  planobs_slack_border.ai
images/ic/: ic_millipede_IC221124A.ai
images/ztf/: ztf_throughput.ai
literature/icecube/: ic_pmt_historical.html
(+33 files in other folders)
