[tool.poetry]
name = "thesis"
version = "0.1.0"
description = ""
authors = ["simeonreusch <simeon.reusch@desy.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
astropy = "^5.2.1"
pandas = "^1.5.3"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88